[gd_scene load_steps=3 format=3 uid="uid://mgxyv085bb0r"]

[ext_resource type="Script" path="res://scenes/ui/tower_card/tower_card.gd" id="1_4bvf3"]
[ext_resource type="Texture2D" uid="uid://btmg2e8ioglt" path="res://resources/sprite/tower/Wizard/wizard_level_1.png" id="2_nplmj"]

[node name="TowerCard" type="PanelContainer"]
custom_minimum_size = Vector2(100, 100)
offset_right = 18.0
offset_bottom = 18.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_4bvf3")

[node name="Background" type="Panel" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TowerNameLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "TowerName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TowerCardTexture" type="TextureRect" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("2_nplmj")
expand_mode = 4

[node name="TowerCostLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Gold: 1000"
horizontal_alignment = 1
vertical_alignment = 1
